tests/parser-test-files/package.txt
================================================================================
Unknown package clause
================================================================================

(package test
  (xxx yyy zzz))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:2:2
   |
 2 |    (xxx yyy zzz))
   |    ^^^^^^^^^^^^^ Unknown package clause
help: Must be one of IMPORT, IMPORT-FROM, EXPORT
 2 |   (xxx yyy zzz))
   |    ---

================================================================================
Empty import clause
================================================================================

(package test
  (import))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:2:9
   |
 2 |    (import))
   |           ^ empty IMPORT form

================================================================================
Illegal type in import clause
================================================================================

(package test
  (import 1.0))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:2:10
   |
 2 |    (import 1.0))
   |            ^^^ expected PACKAGE or (PACKAGE as NICK)

================================================================================
Illegal import as form
================================================================================

(package test
  (import (something sa s)))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:2:21
   |
 2 |    (import (something sa s)))
   |                       ^^ expected AS

================================================================================
Incomplete import as form
================================================================================

(package test
  (import (something as)))

--------------------------------------------------------------------------------

error: Malformed package declaration
  --> test:2:23
   |
 2 |    (import (something as)))
   |                         ^ missing package nickname

================================================================================
Unterminated package form
================================================================================

(package test
  (import (something as s))

--------------------------------------------------------------------------------

error: Unterminated form
  --> test:1:0
   |
 1 |   (package test
   |  _^
 2 | |   (import (something as s))
   | |___________________________^ Missing close parenthesis for form starting at offset 0
